--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "markdown-spellcheck": "^1.3.1",
     "mime-types": "^2.1.27",
     "mockdate": "^3.0.2",
+    "object-path": "^0.11.5",
     "prettier": "=2.1.2",
     "react-test-renderer": "^16.13.1",
     "source-map-explorer": "^2.5.0",
