--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "bl": "^4.0.3",
     "kind-of": "^6.0.2",
     "node-forge": "^0.10.0",
+    "object-path": "^0.11.5",
     "selfsigned": "^1.10.8",
     "serialize-javascript": "^3.1.0"
   },
